fix: align 1st level menu.

--- a/src/TestComponent/Cascader.scss
+++ b/src/TestComponent/Cascader.scss
@@ -1,15 +1,53 @@
-.omc-trigger {
-}
-
 ul.omc-menu {
+  font-family: emoji, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;;
+  list-style: none;
+  box-shadow: 0 8px 18px 0 rgba(32, 45, 64, 0.08);
+  background: rgb(255, 255, 255);
+  position: absolute;
   width: max-content;
   margin: unset;
-  padding: unset;
-  list-style: none;
-  position: absolute;
+  padding: 4px 0;
+  min-width: 160px;
 
   li.omc-menu-item {
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: normal;
+    color: rgb(35, 51, 73);
+    padding: unset;
+    height: 32px;
     width: max-content;
+    min-width: 100%;
+
+    &:hover > span {
+      background: rgb(245, 247, 250);
+    }
+
+    > span {
+      line-height: 32px;
+      padding-left: 12px;
+      padding-right: 4px;
+      display: flex;
+      align-items: center;
+
+      .expand-icon {
+        margin-left: auto;
+        height: 20px;
+        width: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    &.has-divider {
+      padding-bottom: 4px;
+      border-bottom: 1px solid rgb(245, 247, 250);
+
+      & + li.omc-menu-item {
+        margin-top: 4px;
+      }
+    }
 
     &.has-children {
       position: relative;
@@ -17,11 +55,13 @@ ul.omc-menu {
       ul.omc-menu {
         position: absolute;
         top: 0;
-        left: 100%;
+        right: 2px;
+        transform: translateX(100%);
 
         &.expand-r {
           right: 100%;
           left: unset;
+          transform: unset;
         }
       }
     }
